--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.0",
+    "@angular/cdk": "^11.2.7",
     "@angular/cli": "^11.2.6",
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
     "@angular/compiler-cli": "^11.1.2",
     "@angular/core": "~11.1.0",
     "@angular/forms": "~11.1.0",
+    "@angular/material": "^11.2.7",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
